--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
@@ -25,5 +26,9 @@
     "typescript": "^3.8.0",
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
